[FIXED #75433944] [FIXED #75571566] scroll menu
- fix scrolling menu. Problem with show scrollbar on hover even
- add modernizr - touch package

--- a/src/client/scss/_main-menu.scss
+++ b/src/client/scss/_main-menu.scss
@@ -22,13 +22,10 @@
 		top: 0px;
 		bottom: 0px;
 		background-color: $sidebar-first-level-color-bg;
-		overflow: hidden;
+		overflow: auto;
 		left: 0px;
 		width: $sideber-width;
-		
-		&:hover{
-			overflow-y: auto;
-		}
+
 		
 		ul,li{
 			width: $sideber-width;
@@ -115,6 +112,17 @@
 				}
 			}
 			
+		}
+	}
+}
+
+.no-touch{
+	#main-menu{
+		.sidebar{
+			overflow: hidden;
+			&:hover{
+				overflow-y: auto;
+			}
 		}
 	}
 }
